crates/moa-providers/tests/snapshots/gemini_safety_settings__gemini_request_with_json_response_mime_type_includes_field.snap
---
source: crates/moa-providers/tests/gemini_safety_settings.rs
expression: value
---
{
  "contents": [
    {
      "parts": [
        {
          "text": "Inspect the provider request shape."
        }
      ],
      "role": "user"
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 256,
    "responseMimeType": "application/json",
    "responseSchema": {
      "additionalProperties": false,
      "properties": {
        "status": {
          "type": "string"
        }
      },
      "required": [
        "status"
      ],
      "type": "object"
    },
    "temperature": 0.0,
    "thinkingConfig": {
      "thinkingLevel": "medium"
    }
  },
  "safetySettings": [
    {
      "category": "HARM_CATEGORY_HARASSMENT",
      "threshold": "BLOCK_MEDIUM_AND_ABOVE"
    },
    {
      "category": "HARM_CATEGORY_HATE_SPEECH",
      "threshold": "BLOCK_MEDIUM_AND_ABOVE"
    },
    {
      "category": "HARM_CATEGORY_SEXUALLY_EXPLICIT",
      "threshold": "BLOCK_MEDIUM_AND_ABOVE"
    },
    {
      "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
      "threshold": "BLOCK_MEDIUM_AND_ABOVE"
    }
  ],
  "systemInstruction": {
    "parts": [
      {
        "text": "Follow the workspace policy."
      }
    ]
  }
}
